force-app/main/default/objects/Account/fields/Total_de_Projetos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Projetos__c</fullName>
    <label>Total de Projetos</label>
    <summaryForeignKey>ProjetoCliente__c.Conta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>