force-app/main/default/objects/Account/fields/Total_Horas_Tecnicas__c.field-meta.xml
<CustomField>
    <fullName>Total_Horas_Tecnicas__c</fullName>
    <label>Total de Horas Técnicas</label>
    <summarizedField>ProjetoCliente__c.Horas_Estimadas__c</summarizedField>
    <summaryForeignKey>ProjetoCliente__c.Conta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>