force-app/main/default/objects/Account/fields/Total_Projetos_Comerciais__c.field-meta.xml
<CustomField>
    <fullName>Total_Projetos_Comerciais__c</fullName>
    <label>Total em Projetos Comerciais</label>
    <summarizedField>ProjetoCliente__c.Valor_do_Projeto__c</summarizedField>
    <summaryForeignKey>ProjetoCliente__c.Conta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>