force-app/main/default/objects/Account/recordTypes/Conta_de_Projetos.recordType-meta.xml
<RecordType>
    <fullName>Conta_de_Projetos</fullName>
    <active>true</active>
    <label>Conta de Projetos</label>
</RecordType>